[package]
name = "user_manager"
version = "0.1.0"
authors = ["zyddnys <zyddnys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt-simple = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
actix-web = "3"
bson = "1.2.2"
rust-argon2 = "0.8"
rand = "0.8"
chrono = "0.4"

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["async-std-runtime"]
