[package]
name = "thvote-user-manager"
version = "0.1.0"
authors = ["zyddnys <zyddnys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt-simple = {git = "https://github.com/zyddnys/rust-jwt-simple.git"}
serde = { version = "1.0", features = ["derive"] }
actix-web = "3"
actix-cors = "0.5"
actix-rt = "2.2.0"
bson = "1.2.2"
rust-argon2 = "0.8"
rand = "0.8"
chrono = "0.4"
base64 = "0.13.0"
md-5 = "0.10.0"
hex = "0.4.3"
serde_json = "1.0"
bcrypt = "0.10"
tokio = { version = "0.2", features = ["rt-core", "time", "macros"] }
pvrustlib = {path = "../pvrustlib"}

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["async-std-runtime"]

[dependencies.redis]
version = "0.15.1"
#features = ["tokio-comp", "aio"]
